se agrega script de jquery para trabajar con las skill del perfil

--- a/Views/Personas/Perfil.cshtml
+++ b/Views/Personas/Perfil.cshtml
@@ -64,13 +64,13 @@
                                     </span>
 
                                 </p>
-                                <input type="text" class="form-control form-control-sm roboto-thin-ExtraLight-200" placeholder="Nombre del skill" />
+                                <input type="text" id="txtSkill" class="form-control form-control-sm roboto-thin-ExtraLight-200" placeholder="Nombre del skill" />
                             </div>
                         </div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cerrar</button>
-                        <button type="button" class="btn btn-outline-success">Guardar</button>
+                        <button type="button" class="btn btn-outline-success" id="btnGuardarSkill">Guardar</button>
                     </div>
                 </div>
             </div>
