se agregan elementos visuales de jquery aun no esta funcional.

--- a/Views/Personas/Perfil.cshtml
+++ b/Views/Personas/Perfil.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="container-fluid">
-    <div class="row card d-flex flex-row shadow p-3 mb-5 bg-body rounded">
+    <div class="row card d-flex flex-row shadow p-3 mb-1 bg-body rounded">
         <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10 justify-content-start">
             <label class="roboto-ExtraBold-800 title-morado title-size-max">
                 Mtro.Erik Guerrero Bravo
@@ -16,7 +16,7 @@
                 <i class="fa-solid fa-thumbs-up"></i>
                 Agregar Skill
             </button>
-            <button type="button" class="btn btn-outline-success">
+            <button type="button" class="btn btn-outline-success" id="btnBio">
                 <i class="fa-solid fa-house"></i>
                 Bio
             </button>
@@ -24,7 +24,7 @@
                 <i class="fa-solid fa-gear"></i>
                 Configuraciones
             </button>
-           
+
         </div>
         <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 justify-content-end">
             <img src="~/Images/usuario_anonimo_formal.jpg" alt="Descripción de la imagen" class="img-fluid img-thumbnail">
@@ -39,12 +39,35 @@
             <div class="mb-3 justify-content-sm-start">
                 <label for="formFileSm" class="form-label">
                     <i class="fa-solid fa-camera"></i>
-                    Agregar Foto</label>
+                    Agregar Foto
+                </label>
                 <input class="form-control form-control-sm" id="formFileSm" type="file">
             </div>
         </div>
     </div>
-
+    <div class="row pt-0 mt-0" id="cardRow">
+        <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 card d-flex flex-row shadow p-3 mg-5 bg-body rounded" id="cardSkill">
+            
+            <div class="card-body" id="skillBody">
+                <div class="card-title">
+                    <span class="roboto-Black-900 title-morado">Skill Profesionales</span>
+                </div>
+                <hr />
+                
+            </div>
+            
+        </div>
+        <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7 card d-flex flex-row shadow p-3 mg-5 bg-body rounded" id="carBio">
+            <div class="card-body">
+                <div class="card-title">
+                    <span class="roboto-Black-900 title-morado">
+                        Biografía
+                    </span>
+                    <hr />
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="row">
         <!-- Modal -->
         <div class="modal fade" id="modalSkill" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
