se agrega de forma correcta el funcionamiento de la logica de  los skillprofesionales.

--- a/Views/Personas/Perfil.cshtml
+++ b/Views/Personas/Perfil.cshtml
@@ -53,7 +53,7 @@
                     <span class="roboto-Black-900 title-morado">Skill Profesionales</span>
                 </div>
                 <hr />
-                
+                <span id="spanId"></span>
             </div>
             
         </div>
@@ -65,7 +65,9 @@
                     </span>
                     <hr />
                 </div>
+                <textarea class="form-control" id="txtAreaBio" rows="5" placeholder="Escribe tu comentario aquí..."></textarea>
             </div>
+             
         </div>
     </div>
     <div class="row">
