se  modifica pantalla completa para el trabajo con el prcesamiento de los datos de la UI

--- a/Views/Personas/Perfil.cshtml
+++ b/Views/Personas/Perfil.cshtml
@@ -70,6 +70,35 @@
              
         </div>
     </div>
+    
+    <div class="row pt-0 mt-1" id="cardCertificacionesRow">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 card d-flex flex-row shadow p-3 mg-5 bg-body rounded" id="carCertificaciones">
+            <div class="card-body">
+                <div class="card-title">
+                    <span class="roboto-Black-900 title-morado">
+                        Certificaciones
+                    </span>
+                    <hr />
+                </div>
+                <form class="d-flex justify-content-between">
+                    
+                        <label for="exampleInputEmail1" class="form-label">Certificación:</label>
+                        <input type="text" class="form-control form-control-sm" id="exampleInputEmail1" aria-describedby="emailHelp">
+                       
+                        <label for="exampleInputPassword1" class="form-label">Institución:</label>
+                        <input type="text" class="form-control" id="exampleInputPassword1">
+                   
+                    <div class="mb-0 form-check">
+                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                        <label class="form-check-label" for="exampleCheck1">Terminado</label>
+                    </div>
+                    <button type="submit" class="btn btn-outline-success w-25">Agregar</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+
     <div class="row">
         <!-- Modal -->
         <div class="modal fade" id="modalSkill" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
